examples/errors/handling/go.mod
module github.com/sktylr/routeit/examples/errors/handling

go 1.24.4

require github.com/sktylr/routeit v1.1.0
